# Mapster

./: .gitignore  Browse.py  README.md  config.py  dump.rdb  pyproject.toml
pages/: About.py  Upload.py
