[tool.poetry]
name = "mapster"
version = "0.1.0"
description = "A place to share Minecraft Maps"
authors = ["DrgnFireYellow <86269995+DrgnFireYellow@users.noreply.github.com>"]
license = "Apache-2.o"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
